--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "title": "The apples game",
   "description": "The apples game. Part of the Machine Learning: Project course at KU Leuven (Karl Tuyls, Wannes Meert).",
   "version": "1.0.0",
-  "url": "https://github.com/probberechts",
+  "url": "https://github.com/ML-KULeuven/the_apples_game",
   "scripts": {
     "clean": "gulp clean",
     "dist": "gulp dist",
@@ -11,11 +11,13 @@
     "start": "gulp"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.0.0",
     "babel-loader": "^8.0.0",
     "browser-sync": "^2.24.7",
+    "canvas": "^2.3.1",
     "copy-webpack-plugin": "^4.5.2",
+    "datauri": "^1.1.0",
     "del": "^3.0.0",
     "eslint": "^5.4.0",
     "eslint-config-xo": "^0.24.2",
@@ -24,6 +26,7 @@
     "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jsdom": "^13.1.0",
     "plugin-error": "^1.0.1",
     "read-pkg-up": "^4.0.0",
     "webpack": "^4.17.1",
